Revise content to emphasize Data Science methods
Updated the hero section and research card to reflect a focus on Data Science and Statistical methods instead of Spatial statistics.

--- a/index.html
+++ b/index.html
@@ -496,10 +496,10 @@
         <section class="hero">
             <div class="hero-content">
                 <span class="hero-label">Professor of Statistics</span>
-                <h1>Spatial statistics &amp; <em>computational</em> methods</h1>
+                <h1>Data Science &amp; <em>Statistical</em> methods</h1>
                 <p class="hero-description">
                     Developing scalable algorithms for Gaussian and non-Gaussian process regression, 
-                    with applications in uncertainty quantification for massive spatial datasets.
+                    with applications in uncertainty quantification for massive datasets.
                 </p>
                 <div class="hero-meta">
                     <div class="meta-item">
@@ -529,7 +529,7 @@
                     <span class="card-icon">// RESEARCH</span>
                     <h3>Data Science & Statistical Methods</h3>
                     <p>
-                        Publications, ongoing projects, and methodological developments in spatial statistics, 
+                        Publications, ongoing projects, and methodological developments in data science, 
                         Fixed Rank Kriging, and non-Gaussian process regression.
                     </p>
                     <div class="card-arrow">
