Change course codes and update descriptions
Updated course codes and descriptions for various courses.

--- a/teaching.html
+++ b/teaching.html
@@ -533,7 +533,7 @@
                 <div class="course-card">
                     <div class="course-sidebar">
                         <div>
-                            <div class="course-code">STAT 5XXX</div>
+                            <div class="course-code">ESMA 6665</div>
                             <h3 class="course-name">Statistical Computing</h3>
                         </div>
                         <div class="course-semester">
@@ -588,7 +588,7 @@
                 <div class="course-card">
                     <div class="course-sidebar">
                         <div>
-                            <div class="course-code">STAT 4XXX</div>
+                            <div class="course-code">ESMA 4XXX</div>
                             <h3 class="course-name">Introduction to Data Science</h3>
                         </div>
                         <div class="course-semester">
@@ -642,8 +642,8 @@
                 <div class="course-card">
                     <div class="course-sidebar">
                         <div>
-                            <div class="course-code">STAT 6XXX</div>
-                            <h3 class="course-name">Spatial Statistics</h3>
+                            <div class="course-code">COMP 6315</div>
+                            <h3 class="course-name">Data Mining</h3>
                         </div>
                         <div class="course-semester">
                             <span class="semester-dot"></span>
@@ -652,8 +652,7 @@
                     </div>
                     <div class="course-content">
                         <p class="course-description">
-                            Graduate-level course on statistical methods for spatially referenced data, 
-                            including geostatistics, Gaussian processes, and scalable computational approaches.
+                            Graduate-level course of theory and application of diverse data-preprocessing techniques. Application of data visualization techniques in two and three dimensions, linear and non-linear supervised classifiers, clustering methods, and outlier detection. Application of association rule and text mining techniques..
                         </p>
                         <div class="course-topics">
                             <div class="topics-label">Topics Covered</div>
