Update contact information and collaboration focus

--- a/index.html
+++ b/index.html
@@ -564,13 +564,13 @@
             
             <div class="contact-content">
                 <p class="contact-text">
-                    Open to collaboration on research involving scalable spatial methods, 
+                    Open to collaboration on research involving scalable statistical methods, data science, 
                     uncertainty quantification, and computational statistics.
                 </p>
                 <div class="contact-links">
-                    <a href="mailto:rob@uprm.edu" class="contact-link">
+                    <a href="mailto:roberto.rivera30@upr.edu" class="contact-link">
                         <span>EMAIL</span>
-                        rob@uprm.edu
+                        roberto.rivera30@upr.edu
                     </a>
                     <a href="#" class="contact-link">
                         <span>OFFICE</span>
